 # [#26121] wrong output of mod_custom (Mark Visser)
 # [#24137] Decide and document what value the required attribute takes for JForm. (Rune Sjøen)
 # [#26119] Update TinyMCE to version 3.4.3 (Rouven Weßling)
 # [#26084] Don't always load Mootools (More) in the backend - this time for real (Rouven Weßling)
 # [#26112] Remove unnecessary file from CodeMirror (Rouven Weßling)

10-Jun-2011 Mark Dexter
 + [#25041] Module Menu Assignment Enhancements (David Harvard)

10-Jun-2011 Jean-Marie Simonet
 # [#26118] *Multibyte spaces search broken. Thanks Chris and Jonathan.
 # Updating admin components xmls to version 1.7
 # Updating admin manifests and modules xmls to version 1.7
 # Updating site components xmls to version 1.7
 # Updating admin templates xmls to version 1.7
 # Updating main en-GB and localise xmls to version 1.7
 + Adding default empty en-GB.override.ini
 # Updating site modules xmls to version 1.7
 # Updating plugins xmls to version 1.7
 # Updating site templates xmls to version 1.7
 # Updating tests xmls to version 1.7
 # Updating some occurrences of Joomla! 1.6 to Joomla! 1.7 (more TODO)
 
09-Jun-2011 Mark Dexter
 # [#26089] Sync admin layouts (hathor)

09-Jun-2011 Jean-Marie Simonet
 # Updating installation languages xmls to version 1.7
 #$ Deleting redundant lang string from Rev 21463
 
08-Jun-2011 Mark Dexter
 # [#24826] ACL bug in Contact component backend
 # [#25711] All Components are deleted from the Administration interface when a new Menu Type named “menu” is deleted
 # [#25865] Cannot set custom offset for the tooltip
 # [#25938] Repetition code in JHTMLImage::site()
 # [#25974] weblinks component
 # [#26067] Wrong colspan in admin/mod_latest when there are no results
 # [#26083] Update SqueezeBox to version 1.2
 # [#23410] Remove <meta name="title">
 # [#26085] *Uninstalling/discovering 4 core components kills their admin menu translations and links

08-Jun-2011 Christophe Demko